--- a/statement-of-originality.yml
+++ b/statement-of-originality.yml
@@ -8,27 +8,20 @@ declaration: >-
 
 # add as many "name+comment" entries as necessary
 # (or remove it altogether if you haven't collaborated with anyone)
-collaboration:
-  - name:
-    comment: >-
 
 
 # add as many "url+licence+comment" entries as necessary
 # (or remove it altogether if you haven't used any external code)
 code:
-  - comment:
-    url:
-    licence:
+  - comment: Wave code derived from assignment 2 part 1 (u6947396)
+    url: https://gitlab.cecs.anu.edu.au/u6947396/comp2300-2020-assignment-2/blob/part-1/src/main.S
+    licence: N/A
 
 
 # add as many "url+licence+comment" entries as necessary
 # (or remove it altogether if you haven't used any external assets)
-assets:
-  - comment:
-    url:
-    licence:
 
 
 # sign *your* name and uid here
-name:
-uid:
+name: Tim James
+uid: u6947396
