--- a/pins.yml
+++ b/pins.yml
@@ -8,7 +8,9 @@
 # MAKE SURE this is filled out and UP TO DATE come submission time
 connections:
   # uses recommended pins
-  # note on/off from PE14 (sender) to PD0 (receiver)
-  # pitch change from PE15 (sender) to PB3 (receiver)
+  # data from PE13 (sender) to PH1 (receiver)
+  # control from PE14 (sender) to PD0 (receiver)
+  # clock from PE15 (sender) to PB3 (receiver)
+  - PE13 -> PH1
   - PE14 -> PD0
   - PE15 -> PB3
